// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AcceptTermsPrivacyPolicy renders a component matching snapshot when withPrivacyPolicyTerms is true 1`] = `
<div id="acceptTermsField"
     class="o-forms-field o-layout-typography ncf__validation-error"
     data-validate="required,checked"
>
  <div class="privacy-policy-terms">
    <span class="consent-text--top">
      For more information about how we use your data, please refer to our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/privacy-policy/"
         target="_blank"
         rel="noopener noreferrer"
         data-trackable="privacy-policy-info"
      >
        privacy
      </a>
      and 
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/cookies/"
         target="_blank"
         rel="noopener noreferrer"
         data-trackable="cookies-info"
      >
        cookie
      </a>
      policies.
    </span>
    <label class="o-forms-input o-forms-input--checkbox"
           for="termsAcceptance"
    >
      <input type="checkbox"
             id="termsAcceptance"
             name="termsAcceptance"
             value="true"
             data-trackable="field-terms"
             aria-required="true"
             required
      >
      <span class="o-forms-input__label">
        I confirm that I am 16 years or older and agree to the full
        <a class="ncf__link--external"
           href="http://help.ft.com/help/legal-privacy/terms-conditions/"
           target="_blank"
           rel="noopener noreferrer"
           data-trackable="terms-and-conditions"
        >
          Terms &amp; Conditions
        </a>
        .
      </span>
      <p class="o-forms-input__error">
        Please accept our terms &amp; conditions
      </p>
    </label>
  </div>
</div>
`;

exports[`AcceptTermsPrivacyPolicy renders appropriately if a signup 1`] = `
<div id="acceptTermsField"
     class="o-forms-field o-layout-typography ncf__validation-error"
     data-validate="required,checked"
     data-trackable="sign-up-terms"
>
  <div class="privacy-policy-terms">
    <span class="consent-text--top">
      For more information about how we use your data, please refer to our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/privacy-policy/"
         target="_blank"
         rel="noopener noreferrer"
         data-trackable="privacy-policy-info"
      >
        privacy
      </a>
      and 
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/cookies/"
         target="_blank"
         rel="noopener noreferrer"
         data-trackable="cookies-info"
      >
        cookie
      </a>
      policies.
    </span>
    <label class="o-forms-input o-forms-input--checkbox"
           for="termsAcceptance"
    >
      <input type="checkbox"
             id="termsAcceptance"
             name="termsAcceptance"
             value="true"
             data-trackable="field-terms"
             aria-required="true"
             required
      >
      <span class="o-forms-input__label">
        I confirm that I am 16 years or older and agree to the full
        <a class="ncf__link--external"
           href="http://help.ft.com/help/legal-privacy/terms-conditions/"
           target="_blank"
           rel="noopener noreferrer"
           data-trackable="terms-and-conditions"
        >
          Terms &amp; Conditions
        </a>
        .
      </span>
      <p class="o-forms-input__error">
        Please accept our terms &amp; conditions
      </p>
    </label>
  </div>
</div>
`;

exports[`AcceptTermsPrivacyPolicy renders appropriately if a signup for the print product 1`] = `
<div id="acceptTermsField"
     class="o-forms-field o-layout-typography ncf__validation-error"
     data-validate="required,checked"
     data-trackable="sign-up-terms"
>
  <div class="privacy-policy-terms">
    <span class="consent-text--top">
      For more information about how we use your data, please refer to our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/privacy-policy/"
         target="_blank"
         rel="noopener noreferrer"
         data-trackable="privacy-policy-info"
      >
        privacy
      </a>
      and 
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/cookies/"
         target="_blank"
         rel="noopener noreferrer"
         data-trackable="cookies-info"
      >
        cookie
      </a>
      policies.
    </span>
    <label class="o-forms-input o-forms-input--checkbox"
           for="termsAcceptance"
    >
      <input type="checkbox"
             id="termsAcceptance"
             name="termsAcceptance"
             value="true"
             data-trackable="field-terms"
             aria-required="true"
             required
      >
      <span class="o-forms-input__label">
        I confirm that I am 16 years or older and agree to the full
        <a class="ncf__link--external"
           href="http://help.ft.com/help/legal-privacy/terms-conditions/"
           target="_blank"
           rel="noopener noreferrer"
           data-trackable="terms-and-conditions"
        >
          Terms &amp; Conditions
        </a>
        .
      </span>
      <p class="o-forms-input__error">
        Please accept our terms &amp; conditions
      </p>
    </label>
  </div>
</div>
`;

exports[`AcceptTermsPrivacyPolicy renders appropriately if is checked 1`] = `
<div id="acceptTermsField"
     class="o-forms-field o-layout-typography ncf__validation-error"
     data-validate="required,checked"
>
  <div class="privacy-policy-terms">
    <span class="consent-text--top">
      For more information about how we use your data, please refer to our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/privacy-policy/"
         target="_blank"
         rel="noopener noreferrer"
         data-trackable="privacy-policy-info"
      >
        privacy
      </a>
      and 
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/cookies/"
         target="_blank"
         rel="noopener noreferrer"
         data-trackable="cookies-info"
      >
        cookie
      </a>
      policies.
    </span>
    <label class="o-forms-input o-forms-input--checkbox"
           for="termsAcceptance"
    >
      <input type="checkbox"
             id="termsAcceptance"
             name="termsAcceptance"
             value="true"
             data-trackable="field-terms"
             aria-required="true"
             required
             checked
      >
      <span class="o-forms-input__label">
        I confirm that I am 16 years or older and agree to the full
        <a class="ncf__link--external"
           href="http://help.ft.com/help/legal-privacy/terms-conditions/"
           target="_blank"
           rel="noopener noreferrer"
           data-trackable="terms-and-conditions"
        >
          Terms &amp; Conditions
        </a>
        .
      </span>
      <p class="o-forms-input__error">
        Please accept our terms &amp; conditions
      </p>
    </label>
  </div>
</div>
`;

exports[`AcceptTermsPrivacyPolicy renders with an error 1`] = `
<div id="acceptTermsField"
     class="o-forms-field o-layout-typography ncf__validation-error"
     data-validate="required,checked"
>
  <div class="privacy-policy-terms">
    <span class="consent-text--top">
      For more information about how we use your data, please refer to our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/privacy-policy/"
         target="_blank"
         rel="noopener noreferrer"
         data-trackable="privacy-policy-info"
      >
        privacy
      </a>
      and 
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/cookies/"
         target="_blank"
         rel="noopener noreferrer"
         data-trackable="cookies-info"
      >
        cookie
      </a>
      policies.
    </span>
    <label class="o-forms-input o-forms-input--checkbox o-forms-input--invalid"
           for="termsAcceptance"
    >
      <input type="checkbox"
             id="termsAcceptance"
             name="termsAcceptance"
             value="true"
             data-trackable="field-terms"
             aria-required="true"
             required
      >
      <span class="o-forms-input__label">
        I confirm that I am 16 years or older and agree to the full
        <a class="ncf__link--external"
           href="http://help.ft.com/help/legal-privacy/terms-conditions/"
           target="_blank"
           rel="noopener noreferrer"
           data-trackable="terms-and-conditions"
        >
          Terms &amp; Conditions
        </a>
        .
      </span>
      <p class="o-forms-input__error">
        Please accept our terms &amp; conditions
      </p>
    </label>
  </div>
</div>
`;

exports[`AcceptTermsPrivacyPolicy renders with default props 1`] = `
<div id="acceptTermsField"
     class="o-forms-field o-layout-typography ncf__validation-error"
     data-validate="required,checked"
>
  <div class="privacy-policy-terms">
    <span class="consent-text--top">
      For more information about how we use your data, please refer to our
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/privacy-policy/"
         target="_blank"
         rel="noopener noreferrer"
         data-trackable="privacy-policy-info"
      >
        privacy
      </a>
      and 
      <a class="ncf__link--external"
         href="https://help.ft.com/legal-privacy/cookies/"
         target="_blank"
         rel="noopener noreferrer"
         data-trackable="cookies-info"
      >
        cookie
      </a>
      policies.
    </span>
    <label class="o-forms-input o-forms-input--checkbox"
           for="termsAcceptance"
    >
      <input type="checkbox"
             id="termsAcceptance"
             name="termsAcceptance"
             value="true"
             data-trackable="field-terms"
             aria-required="true"
             required
      >
      <span class="o-forms-input__label">
        I confirm that I am 16 years or older and agree to the full
        <a class="ncf__link--external"
           href="http://help.ft.com/help/legal-privacy/terms-conditions/"
           target="_blank"
           rel="noopener noreferrer"
           data-trackable="terms-and-conditions"
        >
          Terms &amp; Conditions
        </a>
        .
      </span>
      <p class="o-forms-input__error">
        Please accept our terms &amp; conditions
      </p>
    </label>
  </div>
</div>
`;
